mobile horizontal scrolling bug fixes

--- a/css/style.css
+++ b/css/style.css
@@ -827,6 +827,7 @@ img.index_image {
   display: block;
   min-height: 400px;
   margin-top: 1rem;
+  max-width: 100vw;
 }
 
 /* colored purple background in parallax for dreamers*/
